# conduit

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  adroit.rev  justfile
.github/workflows/: ci.yml
adr/accepted/: 0001-rust-single-crate-fully-synchronous.md  0002-snapshot-diff-event-router-polling-not-webhooks.md  0007-namespace-scoped-label-convergence.md  0009-retire-the-openhands-engine-and-litellm-routing.md  0012-github-mutation-acceptance-held-owner-gated-behind-dryrun.md  0013-scope-reaffirmation-remaining-out-list-items-stay-retired.md  0014-resolve-cross-repo-dependencies-through-the-uniform-suite-resolution-chain.md  0016-gitlab-adapter-record-only-behind-dryrun-proven-on-authored-fixtures.md
demo/: demo-trigger.sh  docker-compose.yml  gitea-init.sh  github-live-validation.sh  playbook-demo-init.sh  playbook.conduit.toml
demo/kit/: beat-1-measure-prior  beat-2-assess  beat-3-prescribe  beat-4-adopt  beat-5-measure  demo-down  demo-up  lib.sh  preflight
demo/kit/prebaked/: assessment.yaml
docs/: book.toml
docs/adr/accepted/: 0005-effort-labels-from-cumulative-wall-clock.md  (+1 more)
docs/src/: SUMMARY.md  introduction.md
src/: adroit.rs  cli.rs  config.rs  contract.rs  git.rs  hash.rs  labels.rs  lib.rs  machine.rs  main.rs  payload.rs  proc.rs  router.rs  store.rs  task.rs  transcript.rs
src/engine/: claude_code.rs  fake.rs  mod.rs
src/forge/: dry_run.rs  fake.rs  gitea.rs  github.rs  gitlab.rs  mod.rs
tests/: adroit_contract.rs  cli.rs  conformance.rs  demo_init.rs  e2e_fake.rs  machine.rs  payload_parity.rs
tests/fixtures/: fake-adroit
(+28 files in other folders)
